recallable/tests/ui/derive_fail_non_struct.stderr
error: This derive macro can only be applied to structs or enums
 --> tests/ui/derive_fail_non_struct.rs:4:1
  |
4 | / union NotSupported {
5 | |     value: u32,
6 | | }
  | |_^
