recallable/tests/ui/derive_fail_non_struct.rs
use recallable::Recallable;

#[derive(Recallable)]
union NotSupported {
    value: u32,
}

fn main() {}
